deploymentFiles/oktadelegate-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tmp-oktadelegate
  namespace: dev
  uid: c8a6133a-ff99-4383-9d6c-d8a8fce0e757
  resourceVersion: '398623544'
  creationTimestamp: '2022-03-22T11:53:28Z'
  labels:
    app: tmp-oktadelegate
    owner: omnicell-india
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"tmp-oktadelegate"},"name":"tmp-oktadelegate","namespace":"dev"},"spec":{"ports":[{"name":"http","port":80,"targetPort":80}],"selector":{"app":"tmp-oktadelegate"},"type":"ClusterIP"}}
  managedFields:
    - manager: kubectl-client-side-apply
      operation: Update
      apiVersion: v1
      time: '2022-03-22T11:53:28Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
          f:labels:
            .: {}
            f:app: {}
        f:spec:
          f:ports:
            .: {}
            k:{"port":80,"protocol":"TCP"}:
              .: {}
              f:name: {}
              f:port: {}
              f:protocol: {}
              f:targetPort: {}
          f:selector:
            .: {}
            f:app: {}
          f:sessionAffinity: {}
          f:type: {}
  selfLink: /api/v1/namespaces/dev/services/tmp-oktadelegate
status:
  loadBalancer: {}
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: tmp-oktadelegate
  type: ClusterIP
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
